--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "axios": "0.19.0",
     "ky": "0.15.0",
-    "lighterhtml": "1.4.1"
+    "lighterhtml": "1.4.1",
+    "on-change": "1.6.2"
   },
   "devDependencies": {
     "parcel-bundler": "^1.6.1"
