added raf and network batching

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,10 +5,7 @@
     "esModuleInterop": true,
     "sourceMap": true,
     "allowJs": true,
-    "lib": [
-      "es6",
-      "dom"
-    ],
+    "target": "es2020",
     "rootDir": "src",
     "moduleResolution": "node"
   }
