--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "parcel index.html --open",
     "build": "parcel build index.html"
   },
+  "browserslist": ["last 1 Chrome version"],
   "dependencies": {},
   "devDependencies": {
     "parcel-bundler": "^1.6.1"
