--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
     "last 1 Chrome version"
   ],
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.19.0",
+    "@typescript-eslint/parser": "^2.19.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
     "parcel-bundler": "^1.12.4",
     "parcel-plugin-sw-cache": "^0.3.1",
-    "typescript": "^3.7.2"
+    "prettier": "^1.19.1",
+    "typescript": "^3.7.5"
   },
   "cache": {
     "inDev": false,
