--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "parcel-bundler": "^1.12.4",
     "parcel-plugin-sw-cache": "^0.3.1",
     "prettier": "^1.19.1",
+    "sass": "^1.26.5",
     "typescript": "^3.7.5"
   },
   "cache": {
