--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "target": "ESnext",
     "rootDir": "src",
     "outDir": "dist",
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "strict": true
   }
 }
